--- a/_static/index.html
+++ b/_static/index.html
@@ -14,6 +14,27 @@
 </head>
 
 <body class="home preload">
+
+	<header class="top">
+		<div class="wrap"></div>
+	</header><!--/ top -->
+
+	<section class="prompt">
+		<div class="wrap"></div>
+	</section><!--/ prompt -->
+
+	<section class="output">
+		<section class="static">
+			<div class="wrap"></div>
+		</section>
+		<section class="dynamic">
+			<div class="wrap"></div>
+		</section>
+	</section><!--/ output -->
+
+	<footer class="bottom">
+		<div class="wrap"></div>
+	</footer><!--/ bottom -->
 		
 	<script src="assets/js/jquery-1.8.1.min.js"></script>
 	<script src="assets/js/libs.js"></script>
