--- a/_static/index.html
+++ b/_static/index.html
@@ -16,7 +16,9 @@
 <body class="home preload">
 
 	<header class="top">
-		<div class="wrap"></div>
+		<div class="wrap">
+			<a href="" class="logo">&nbsp;</a>
+		</div>
 	</header><!--/ top -->
 
 	<section class="prompt">
