Add footer markup

--- a/_static/index.html
+++ b/_static/index.html
@@ -35,7 +35,27 @@
 	</section><!--/ output -->
 
 	<footer class="bottom">
-		<div class="wrap"></div>
+		<div class="wrap">
+			<div class="info clearfix">
+				<div class="two-thirds left">
+					<div class="inner">
+						<h3>ABOUT BISCUIT<sub>INDEX</sub></h3>
+						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="third right">
+					<h3>SOCIAL</h3>
+					<ul class="social">
+						<li><a href="" class="fb">&nbsp;</a></li>
+						<li><a href="" class="tw">&nbsp;</a></li>
+						<li><a href="" class="gp">&nbsp;</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="credits">
+				<p class="clearfix">Code for Africa &copy; 2016. <a href="http://skylinedesign.co.ke" target="_blank" class="martianskills right fx">signed. martians.</a></p>
+			</div>
+		</div>
 	</footer><!--/ bottom -->
 		
 	<script src="assets/js/jquery-1.8.1.min.js"></script>
