Add banner markup

--- a/_static/index.html
+++ b/_static/index.html
@@ -21,8 +21,21 @@
 		</div>
 	</header><!--/ top -->
 
-	<section class="prompt">
-		<div class="wrap"></div>
+	<section class="prompt cover">
+		<div class="wrap">
+			<p>How much do you spend on <select name="category" id="category">
+					<option value="">Monthly Rent</option>
+					<option value="">School Fees per Term</option>
+					<option value="">Daily Commutes</option>
+				</select>? <input type="number" name="expenditure" id="expenditure" placeholder="0" class="fx-fast"><span class="currency">KES</span>
+			</p>
+			<p>Compare this to <select name="county" id="county">
+					<option value="">Nairobi</option>
+					<option value="">Nyeri</option>
+					<option value="">Murang'a</option>
+				</select> County’s expenditure on <em>&ldquo;tea and biscuits&rdquo;.</em></p>
+				<p><a href="" class="compare fx">Compare</a></p>
+		</div>
 	</section><!--/ prompt -->
 
 	<section class="output">
