Add summary output markup and styles

--- a/_static/index.html
+++ b/_static/index.html
@@ -40,10 +40,23 @@
 
 	<section class="output">
 		<section class="static">
-			<div class="wrap"></div>
+			<div class="wrap flex">
+				<div class="side-col">
+					<div class="inner">
+						<span id="output-county">Nairobi</span> County's budget of <br><span id="output-budget">2,000,000</span><br>
+						equals your <span id="output-category">Monthly Rent</span> for approximately<br><span id="output-units">200</span> people
+					</div>
+				</div>
+				<div class="main-col"></div>
+			</div>
 		</section>
 		<section class="dynamic">
-			<div class="wrap"></div>
+			<div class="wrap flex">
+				<div class="side-col">
+					<div class="inner"></div>
+				</div>
+				<div class="main-col"></div>
+			</div>
 		</section>
 	</section><!--/ output -->
 
