feed data to frontend

--- a/_static/index.html
+++ b/_static/index.html
@@ -145,7 +145,7 @@
 	<script type="text/javascript">
 		// extract county hospitality budget from JSON 
 		// and assign it here. The rest is magic.
-		var countyBudget = 96000000;
+        var countyBudget = {{ biscuit_budget }};
 	</script>
 </body>
 </html>
