Add human-readable budget display

--- a/_static/index.html
+++ b/_static/index.html
@@ -145,7 +145,8 @@
 	<script type="text/javascript">
 		// extract county hospitality budget from JSON 
 		// and assign it here. The rest is magic.
-        var countyBudget = {{ biscuit_budget }};
+		var countyBudgetInteger = 96000000,
+			countyBudgetString 	= '96 million';
 	</script>
 </body>
 </html>
