Add top explainer section

--- a/_static/index.html
+++ b/_static/index.html
@@ -23,19 +23,28 @@
 	</header><!--/ top -->
 
 	<section class="prompt cover">
-		<div class="wrap">
-			<p>How much do you spend on <select name="category" id="category">
-					<option value="rent">Monthly Rent</option>
-					<option value="fees">School Fees per Term</option>
-					<option value="commute">Daily Commutes</option>
-				</select>? <input type="number" name="expenditure" id="expenditure" placeholder="0" class="fx-fast"><span class="currency">KES</span>
-			</p>
-			<p>Compare this to <select name="county" id="county">
-					<option value="nairobi">Nairobi</option>
-					<option value="nyeri">Nyeri</option>
-					<option value="muranga">Murang'a</option>
-				</select> County’s expenditure on <em>&ldquo;tea and biscuits&rdquo;.</em></p>
-				<p><a href="" id="compare" class="compare fx">Compare</a></p>
+		<div class="wrap clearfix">
+
+			<div class="left intro-text">
+				<p>Do you know how much money your county spends on <em>"tea and biscuits",</em> i.e. hospitality?</p>
+				<p>Find out exactly how much and compare it not just to similar items that the same amount would buy, but also to other ways the money could be better used.</p>
+			</div>
+			<div class="right action-box">
+				<div class="inner">
+					<p>How much do you spend on <select name="category" id="category">
+							<option value="rent">Monthly Rent</option>
+							<option value="fees">School Fees per Term</option>
+							<option value="commute">Daily Commutes</option>
+						</select>? <input type="number" name="expenditure" id="expenditure" placeholder="0" class="fx-fast"><span class="currency">KES</span>
+					</p>
+					<p>Compare this to <select name="county" id="county">
+							<option value="nairobi">Nairobi</option>
+							<option value="nyeri">Nyeri</option>
+							<option value="muranga">Murang'a</option>
+						</select> County’s expenditure on <em>&ldquo;tea and biscuits&rdquo;.</em></p>
+					<p><a href="" id="compare" class="compare fx">Compare</a></p>				
+				</div>
+			</div>
 		</div>
 	</section><!--/ prompt -->
 
