Add social sharing div in top bar

--- a/_static/index.html
+++ b/_static/index.html
@@ -17,8 +17,11 @@
 <body class="home preload">
 
 	<header class="top">
-		<div class="wrap">
+		<div class="wrap clearfix">
 			<a href="" class="logo">&nbsp;</a>
+			<div class="social-sharing">
+				<!-- place social buttons here -->
+			</div>
 		</div>
 	</header><!--/ top -->
 
