--- a/_static/index.html
+++ b/_static/index.html
@@ -11,7 +11,7 @@
 	<script src="assets/js/modernizr-2.6.2.min.js"></script>
 	<link rel="stylesheet" href="assets/css/css.css" type="text/css" />
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,300,300italic' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 
 <body class="home preload">
@@ -20,7 +20,8 @@
 		<div class="wrap clearfix">
 			<a href="" class="logo">&nbsp;</a>
 			<div class="social-sharing">
-				<!-- place social buttons here -->
+                <!-- place social buttons here -->
+                <a href="https://twitter.com/intent/tweet?button_hashtag=BiscuitIndex&text=Learn%20how%20much%20your%20county%20spends%20on%20tea%20and%20biscuits" class="twitter-hashtag-button" data-size="large" data-url="http://biscuitindex.codeforkenya.org">Tweet #BiscuitIndex</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 			</div>
 		</div>
 	</header><!--/ top -->
@@ -146,13 +147,13 @@
 		
 	<script src="assets/js/jquery-1.8.1.min.js"></script>
 	<script src="assets/js/libs.js"></script>
-	<script src="assets/js/js.js"></script>
+    <script src="assets/js/js.js"></script>
 
 	<script type="text/javascript">
 		// extract county hospitality budget from JSON 
 		// and assign it here. The rest is magic.
-		var countyBudgetInteger = 96000000,
-			countyBudgetString 	= '96 million';
+        var countyBudgetInteger = {{ biscuit_budget }}
+            countyBudgetString 	= {{ biscuit_budget_str }};
 	</script>
 </body>
 </html>
