Better labels, partial updated color scheme

--- a/_static/index.html
+++ b/_static/index.html
@@ -43,7 +43,7 @@
 
 			<div class="left intro-text">
 				<p>Do you know how much money your county spends on <em>"tea and biscuits",</em> i.e. hospitality?</p>
-				<p>Find out exactly how much and compare it not just to similar items that the same amount would buy, but also to other ways the money could be better used.</p>
+				<p>Find out exactly how much and compare it not just to similar items that the same amount would buy, but also to other ways the money could be better used &rarr;</p>
 			</div>
 			<div class="right action-box">
 				<div class="inner">
@@ -84,47 +84,51 @@
 					</div>
 				</div>
 				<div class="main-col">
-					<div class="icon-container output-icons">
-						<i class="house"></i>
-					</div>
-					<div class="icon-legend">
-						<i class="house"></i> = <span id="output-ratio">100</span> <span id="output-ratio-units">homes</span>											
+					<div class="static-chart">
+						<div class="icon-container output-icons">
+							<i class="house"></i>
+						</div>
+						<div class="icon-legend">
+							<i class="house"></i> = <span id="output-ratio">100</span> <span id="output-ratio-units">homes</span>											
+						</div>
 					</div>
 
-					<div class="icon-row">
-						<div class="flex">
-							<div class="icon-container soda-icons"></div>
-							<div class="batch-count">
-								<div id="batch-count--soda"></div>
-								<div class="batch-count-name">Crates</div>
+					<div class="dynamic-chart">
+						<div class="icon-row">
+							<div class="">
+								<div class="batch-count">
+									<div id="batch-count--soda"></div>
+									<div class="batch-count-name">Bottles</div>
+								</div>
+								<div class="icon-container soda-icons"></div>
+							</div>
+							<div class="icon-legend">
+								<i class="soda"></i> = <span id="output-soda-ratio">100</span> <span class="output-ratio-units"> 300ml <strong>bottles</strong>
 							</div>
 						</div>
-						<div class="icon-legend">
-							<i class="soda"></i> = <span id="output-soda-ratio">100</span> <span class="output-ratio-units"> 300ml <strong>bottles</strong> <em>@</em> KES 30</span>
-						</div>
-					</div>
-					<div class="icon-row">
-						<div class="flex">
-							<div class="icon-container coffee-icons"></div>
-							<div class="batch-count">
-								<div id="batch-count--coffee"></div>
-								<div class="batch-count-name">Litres</div>
+						<div class="icon-row">
+							<div class="">
+								<div class="batch-count">
+									<div id="batch-count--coffee"></div>
+									<div class="batch-count-name">Cups</div>
+								</div>
+								<div class="icon-container coffee-icons"></div>
+							</div>
+							<div class="icon-legend">
+								<i class="coffee"></i> = <span id="output-coffee-ratio">100</span> <span class="output-ratio-units"> <strong>cups</strong> of Tea
 							</div>
 						</div>
-						<div class="icon-legend">
-							<i class="coffee"></i> = <span id="output-coffee-ratio">100</span> <span class="output-ratio-units"> <strong>cups</strong> of Java coffee <em>@</em> KES 220</span>
-						</div>
-					</div>
-					<div class="icon-row">
-						<div class="flex">
-							<div class="icon-container cupcake-icons"></div>
-							<div class="batch-count">
-								<div id="batch-count--cupcake"></div>
-								<div class="batch-count-name">Packets</div>
+						<div class="icon-row">
+							<div class="">
+								<div class="batch-count">
+									<div id="batch-count--cupcake"></div>
+									<div class="batch-count-name">Loaves</div>
+								</div>
+								<div class="icon-container cupcake-icons"></div>
 							</div>
-						</div>
-						<div class="icon-legend">
-							<i class="cupcake"></i> = <span id="output-cupcake-ratio">100</span> <span class="output-ratio-units"> <strong>cupcakes</strong> <em>@</em> KES 15</span>
+							<div class="icon-legend">
+								<i class="cupcake"></i> = <span id="output-cupcake-ratio">100</span> <span class="output-ratio-units"> <strong>loaves</strong>
+							</div>
 						</div>
 					</div>
 				</div>
