--- a/_static/index.html
+++ b/_static/index.html
@@ -32,8 +32,8 @@
 			<a href="" class="logo">&nbsp;</a>
 			<div class="social-sharing">
                 <!-- place social buttons here -->
-                <a href="https://twitter.com/intent/tweet?button_hashtag=BiscuitIndex&text=Learn%20how%20much%20your%20county%20spends%20on%20tea%20and%20biscuits" class="twitter-hashtag-button" data-size="large" data-url="http://biscuitindex.codeforkenya.org">Tweet #BiscuitIndex</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-				<div class="fb-share-button" data-href="http://biscuitindex.codeforkenya.org/" data-layout="button" data-size="large" data-mobile-iframe="true" style="line-height:15px;"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbiscuitindex.codeforkenya.org%2F&amp;src=sdkpreparse">Share</a></div>
+                <a id="tweet-btn" href="https://twitter.com/intent/tweet?button_hashtag=BiscuitIndex&text=Learn%20how%20much%20your%20county%20spends%20on%20tea%20and%20biscuits" class="twitter-hashtag-button" data-size="large" data-url="http://biscuitindex.codeforkenya.org"></a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+				<div id="fb-btn" class="fb-share-button" data-href="http://biscuitindex.codeforkenya.org/" data-layout="button" data-size="large" data-mobile-iframe="true" style="line-height:15px;"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbiscuitindex.codeforkenya.org%2F&amp;src=sdkpreparse"></a></div>
 			</div>
 		</div>
 	</header><!--/ top -->
@@ -58,7 +58,7 @@
 							<option value="nyeri">Nyeri</option>
 							<option value="muranga">Murang'a</option>
 						</select> County’s expenditure on <em>&ldquo;tea and biscuits&rdquo;.</em></p>
-					<p><a href="" id="compare" class="compare fx">Compare</a></p>				
+					<p><a href="" id="compare" class="compare fx">Compare</a></p>
 				</div>
 			</div>
 		</div>
@@ -166,10 +166,16 @@
     <script src="assets/js/js.js"></script>
 
 	<script type="text/javascript">
-		// extract county hospitality budget from JSON 
+		$('#tweet-btn').html('Tweet #BiscuitIndex')
+		$('#fb-btn').html('Share')
+		// extract county hospitality budget from JSON
 		// and assign it here. The rest is magic.
-        var countyBudgetInteger = {{ biscuit_budget }}
-            countyBudgetString 	= {{ biscuit_budget_str }};
+		try {
+			var countyBudgetInteger = {{ biscuit_budget }}
+			countyBudgetString 	= {{ biscuit_budget_str }}
+		} catch(err) {
+			console.log(err)
+		}
 	</script>
 </body>
 </html>
