Add description area and update footer notice

--- a/_static/index.html
+++ b/_static/index.html
@@ -94,6 +94,7 @@
 					</div>
 
 					<div class="dynamic-chart">
+						<div class="mid-desc">More info here...</div>
 						<div class="icon-row">
 							<div class="">
 								<div class="batch-count">
@@ -142,21 +143,11 @@
 			<div class="info clearfix">
 				<div class="two-thirds left">
 					<div class="inner">
-						<h3>ABOUT BISCUIT<sub>INDEX</sub></h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
+						<p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="nofollow">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 					</div>
 				</div>
 				<div class="third right">
-					<h3>SOCIAL</h3>
-					<ul class="social">
-						<li><a href="" class="fb">&nbsp;</a></li>
-						<li><a href="" class="tw">&nbsp;</a></li>
-						<li><a href="" class="gp">&nbsp;</a></li>
-					</ul>
 				</div>
-			</div>
-			<div class="credits">
-				<p class="clearfix">Code for Africa &copy; 2016. <a href="http://skylinedesign.co.ke" target="_blank" class="martianskills right fx">signed. martians.</a></p>
 			</div>
 		</div>
 	</footer><!--/ bottom -->
@@ -168,8 +159,8 @@
 	<script type="text/javascript">
 		// extract county hospitality budget from JSON 
 		// and assign it here. The rest is magic.
-        var countyBudgetInteger = {{ biscuit_budget }}
-            countyBudgetString 	= {{ biscuit_budget_str }};
+        var countyBudgetInteger = 96000000,
+            countyBudgetString 	= '96 million';
 	</script>
 </body>
 </html>
