Add footer logos

--- a/_static/index.html
+++ b/_static/index.html
@@ -146,7 +146,9 @@
 						<p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="nofollow">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 					</div>
 				</div>
-				<div class="third right">
+				<div class="third right txt-right">
+					<a href="https://codeforkenya.org/" class="footer-logo cfk"></a>
+					<a href="https://www.hivos.org/" class="footer-logo hivos"></a>
 				</div>
 			</div>
 		</div>
