--- a/_static/index.html
+++ b/_static/index.html
@@ -163,7 +163,7 @@
 		// extract county hospitality budget from JSON 
 		// and assign it here. The rest is magic.
         var countyBudgetInteger = {{ biscuit_budget }},
-            countyBudgetString 	= {{ biscuit_budget_str }};
+            countyBudgetString 	= '{{ biscuit_budget_str }}';
 	</script>
 </body>
 </html>
