--- a/_static/index.html
+++ b/_static/index.html
@@ -51,7 +51,7 @@
 							<option value="rent">Monthly Rent</option>
 							<option value="fees">School Fees per Term</option>
 							<option value="commute">Daily Commutes</option>
-							<option value="maize" data-type="immutable" data-amount="5000">Cost of Maize</option>
+							<option value="maize" data-type="false" data-amount="5000">Cost of Maize</option>
 						</select>? <input type="number" name="expenditure" id="expenditure" placeholder="0" class="fx-fast"><span class="currency">KES</span>
 					</p>
                     <p>Compare this to <select name="county" id="county">
