--- a/_static/index.html
+++ b/_static/index.html
@@ -13,7 +13,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,300,300italic' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
     <script>
-        var comparatives = '{{comparatives}}';
+        var comparatives = "{{comparatives|safe}}";
     </script>
 </head>
 
