Making the description variable

--- a/_static/index.html
+++ b/_static/index.html
@@ -76,7 +76,9 @@
 					<div class="static-nav">
 						<div class="inner">
 							<span id="output-county">Nairobi</span> County's budget of <br><span id="output-budget">0</span><br>
-							equals your <span id="output-category">Monthly Rent</span> for approximately<br><span id="output-comparison">0</span> <span id="output-comparison-units">people</span>
+							<span id="output-category">equals your Monthly Rentfor approximately</span> <br>
+                            <span id="output-comparison">0</span>
+                            <span id="output-comparison-units">people</span>
 						</div>
 						<div class="inner">
 							<nav class="controls">
