Fixed bug-immutable values

--- a/_static/index.html
+++ b/_static/index.html
@@ -167,7 +167,7 @@
 	<script type="text/javascript">
 		// extract county hospitality budget from JSON 
 		// and assign it here. The rest is magic.
-		var countyBudgetInteger = {{ biscuit_budget }},
+		var countyBudgetInteger = '{{ biscuit_budget }}',
 		countyBudgetString 	= '{{ biscuit_budget_str }}';
 	</script>
 </body>
