add export link

--- a/_static/index.html
+++ b/_static/index.html
@@ -149,7 +149,9 @@
 			<div class="info clearfix">
 				<div class="two-thirds left">
 					<div class="inner">
-						<p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="nofollow">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+                        <p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="nofollow">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+                        <br>
+                        <p>  <a href="/data.json" target="_blank">Export the raw data</a> behind this site.</p>
 					</div>
 				</div>
 				<div class="third right txt-right">
