Added dumb links

--- a/_static/index.html
+++ b/_static/index.html
@@ -144,6 +144,13 @@
 
 	</section><!--/ output -->
 
+    <div class="news-section wrap clearfix">
+        <div class="news-box">Are counties spending enough on health?<a href="#"/>read more</a></div>
+        <div class="news-box">Cost of living pushes millions to the edge<a href="#"/>read more</a></div>
+        <div class="news-box">Counties spending millions on hospitality<a href="#"/>read more</a></div>
+        <div class="news-box">Emergency services lacking as MCAs sink millions into fuel guzzlers<a href="#"/>read more</a></div>
+    </div>
+
 	<footer class="bottom">
 		<div class="wrap">
 			<div class="info clearfix">
