created a base for story

--- a/_static/index.html
+++ b/_static/index.html
@@ -134,7 +134,7 @@
 								<div class="icon-container malarial-icons"></div>
 							</div>
 							<div class="icon-legend">
-								<i class="malarial"></i> = <span id="output-malarial-ratio">100</span> <span class="output-ratio-units"> <strong>Malarial</strong> Drugs</span>
+								<i class="malarial"></i> = <span id="output-malarial-ratio">100</span> <span class="output-ratio-units"> <strong>Malaria</strong> Drugs</span>
 							</div>
 						</div>
 					</div>
