MVP story pages up

--- a/_static/index.html
+++ b/_static/index.html
@@ -146,10 +146,10 @@
 
     <div class="news-section wrap clearfix">
 		<h1>In the news</h1>
-		<div class="news-box"><a href="/story">Are counties spending enough on health?<span>read more</span></a></div>
-		<div class="news-box"><a href="/story">Cost of living pushes millions to the edge <span>read more</span></a></div>
-		<div class="news-box"><a href="/story">Counties spending millions on hospitality<span>read more</span></a></div>
-		<div class="news-box"><a href="/story">Emergency services lacking as MCAs sink millions into fuel guzzlers <span>read more</span></a></div>
+		<div class="news-box"><a href="/how-mcas-mandazi-addiction-is-killing-kenyas-poorest">How MCAs mandazi Addiction Is Killing Kenya's Poorest<span>read more</span></a></div>
+		<div class="news-box"><a href="/from-loan-to-mouth">From loan to mouth: Kenya’s debt economy<span>read more</span></a></div>
+		<div class="news-box"><a href="/feeding-frenzy-as-counties-spend-millions-on-hospitality">Feeding frenzy as counties spend millions on ‘hospitality.’<span>read more</span></a></div>
+		<div class="news-box"><a href="/mcas-spend-billions-on-foreign-trips">MCAs spend billions on foreign trips <span>read more</span></a></div>
 	</div>
 
 	<footer class="bottom">
