Sprucing the stories on landing

--- a/_static/index.html
+++ b/_static/index.html
@@ -145,11 +145,23 @@
 	</section><!--/ output -->
 
     <div class="news-section wrap clearfix">
-		<h1>In the news</h1>
-		<div class="news-box"><a href="/how-mcas-mandazi-addiction-is-killing-kenyas-poorest">How MCAs mandazi Addiction Is Killing Kenya's Poorest<span>read more</span></a></div>
-		<div class="news-box"><a href="/from-loan-to-mouth">From loan to mouth: Kenya’s debt economy<span>read more</span></a></div>
-		<div class="news-box"><a href="/feeding-frenzy-as-counties-spend-millions-on-hospitality">Feeding frenzy as counties spend millions on ‘hospitality.’<span>read more</span></a></div>
-		<div class="news-box"><a href="/mcas-spend-billions-on-foreign-trips">MCAs spend billions on foreign trips <span>read more</span></a></div>
+		<div class="news-box"><a href="/how-mcas-mandazi-addiction-is-killing-kenyas-poorest">
+			<h3>How MCAs mandazi Addiction Is Killing Kenya's Poorest</h3><hr>
+			<small>Kenya only has only eight fully equipped MRI facilities where you can get radiation treatment for cancer— one in each of ... </small>
+			<span>more</span></a>
+		</div>
+		<div class="news-box"><a href="/from-loan-to-mouth">
+			<h3>From loan to mouth: Kenya’s debt economy</h3><hr>
+			<small>Kenyans have over the years continued to consume more than they have and saving little.</small>
+			<span>more</span></a></div>
+		<div class="news-box"><a href="/feeding-frenzy-as-counties-spend-millions-on-hospitality">
+			<h3>Feeding frenzy as counties spend millions on ‘hospitality.’</h3><hr>
+			<small>Do you know how much your county has been spending on tea, mandazi, samosas and hot lunches for your MCAs and governors?</small>
+			<span>more</span></a></div>
+		<div class="news-box"><a href="/mcas-spend-billions-on-foreign-trips">
+			<h3>MCAs spend billions on foreign trips</h3><hr>
+			<small>The race seems to be on to get as many frequent flyer miles as county assembly members and governors continue ...</small>
+			<span>more</span></a></div>
 	</div>
 
 	<footer class="bottom">
