--- a/_static/story2.html
+++ b/_static/story2.html
@@ -2,7 +2,7 @@
 {% block content %}
 <section class="prompt cover">
 	<div class="wrap clearfix" style="padding: 60px 0 14px;width:65%;">
-		<h1 style="font-size:42px;">From loan to mouth: Kenya’s debt economy</h1>
+		<h1 id="title" style="font-size:42px;">From loan to mouth: Kenya’s debt economy</h1>
 		<small style="font-size:12px;"> Otiato Guguyu, 4th Aug 2016</small>
 	</div>
 </section><!--/ prompt -->
